# SkillCentral

./: .gitignore  CMakeLists.txt  README.md  config.json  test_minimal.cpp
.workbuddy/memory/: 2026-06-13.md
docs/: REQUIREMENTS.md  investigation_report_20260613.md  plan.md
include/database/: DatabaseManager.h
include/models/: AgentManager.h  Skill.h  SkillManager.h
include/ui/: AgentDialog.h  CardWidget.h  MainWindow.h  MarkdownRenderer.h  SettingsDialog.h  SkillCard.h  SkillSidebar.h  TagManagerDialog.h
resources/: icon.rc  resources.qrc
src/: main.cpp
src/database/: DatabaseManager.cpp
src/models/: AgentManager.cpp  Skill.cpp  SkillManager.cpp
src/ui/: AgentDialog.cpp  CardWidget.cpp  MainWindow.cpp  MainWindow.cpp.bak  MarkdownRenderer.cpp  SettingsDialog.cpp  SkillCard.cpp  SkillSidebar.cpp  TagManagerDialog.cpp
tests/: test_AgentManager.cpp  test_DatabaseManager.cpp  test_MainWindow.cpp  test_SkillManager.cpp
